# bioagent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-lock.txt  run_braf_case.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  ablation.py  resume_run.py  run_benchmark.py
benchmarks/baselines/: __init__.py  autogen_baseline.py  biogpt_reference.md  single_prompt.py
benchmarks/cases/: __init__.py  braf_melanoma.py  scrna_pbmc.py  tp53_pancancer.py
benchmarks/data/: README.md
benchmarks/results/: benchmark_summary.json
benchmarks/results/braf_5_71_backup/: evaluation_report.json  manuscript.md  provenance.json
bioagent/agents/: analyst.py  base.py  data_acquisition.py  literature.py  orchestrator.py  planner.py  visualization.py  writer.py
bioagent/cli/: display.py  main.py
bioagent/config/: settings.py
bioagent/evaluation/: __init__.py  metrics.py  provenance.py
bioagent/export/: __init__.py  bibtex.py  latex_export.py  markdown_export.py
bioagent/graph/: nodes.py  research_graph.py  routing.py
bioagent/llm/: clients.py  token_tracking.py  tool_loop.py
bioagent/prompts/: analyst.md  data_acquisition.md  literature.md  orchestrator.md  planner.md  review.md  visualization.md  writer.md
bioagent/state/: reducers.py  schema.py
bioagent/tools/: registry.py
bioagent/utils/: logging_config.py  serialization.py
docs/: 2026-04-18_resilience_release.md  CONTRIBUTING.md  DEVELOPMENT.md  architecture.md
examples/: custom_agent.py  custom_tool.py  quickstart.py
examples/braf_melanoma/: final_run_log.json  run_log.json
paper/: cover_letter.txt  manuscript.tex  references.bib
paper/figures/: generate_figures.py
paper/supplementary/: S1_case_study_braf.md  S2_methods_detail.md  S3_ablation_full_results.md  S4_error_analysis.md  S5_reproducibility.md
scripts/: patch_braf_hypotheses.py  reproduce_benchmark.ps1  reproduce_benchmark.sh  verify_hashes.py
tests/: conftest.py  test_ablation.py  test_data_acquisition.py  test_export.py  test_http_resilience.py  test_integration.py  test_orchestrator_loop.py  test_orchestrator_routing.py  test_state.py  test_unit_agents.py  test_unit_tools.py
(+63 files in other folders)
